更新了登录模块丶退出登录功能丶首页列表渲染丶切换频道模块
Signed-off-by: XiaoXinGod <1606777570@qq.com>

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,13 @@
 // 全局样式文件
-// body{
-//     background-color: red;
-// }
+body{
+    background-color: #f5f7f9;
+}
+.app-nav-bar {
+    background-color: #3296fa;
+    .van-icon{
+        color: #ffffff;
+    }
+    .van-nav-bar__title{
+    color: #ffffff;
+    }
+}
